--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --config ./vitest.config.ts",
+    "coverage": "vitest run --coverage --config ./vitest.config.ts"
   },
   "devDependencies": {
+    "c8": "^7.11.3",
     "typescript": "^4.5.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vitest": "^0.15.1"
   },
   "dependencies": {
     "javascript-state-machine": "^3.1.0"
