--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest --config ./vitest.config.ts",
+    "test:promise": "tsc ./src/interviews/promise-like.ts && promises-aplus-tests ./src/interviews/promise-like.js",
     "coverage": "vitest run --coverage --config ./vitest.config.ts"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "c8": "^7.11.3",
+    "promises-aplus-tests": "^2.1.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vitest": "^0.15.1"
