--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "snippets",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --config ./vitest.config.ts",
-    "test:promise": "tsc ./src/interviews/promise-like.ts && promises-aplus-tests ./src/interviews/promise-like.js",
-    "coverage": "vitest run --coverage --config ./vitest.config.ts"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:promise": "tsc ./src/promise-like.ts && promises-aplus-tests ./src/promise-like.js",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "c8": "^7.11.3",
+    "@types/node": "^18.7.3",
+    "install": "^0.13.0",
+    "pnpm": "^7.9.0",
     "promises-aplus-tests": "^2.1.2",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vitest": "^0.15.1"
+    "typescript": "^4.6.4",
+    "vite": "^3.0.7",
+    "vitest": "^0.21.1"
   },
   "dependencies": {
-    "javascript-state-machine": "^3.1.0",
     "vue": "^3.2.37",
-    "vue2": "npm:vue@^2.6.14"
+    "vue2": "npm:vue@^2.7"
   }
 }
