chore: update package

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vitest": "^0.21.1"
   },
   "dependencies": {
+    "javascript-state-machine": "^3.1.0",
     "vue": "^3.2.37",
     "vue2": "npm:vue@^2.7"
   }
