--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "stylelint:fix": "stylelint **/*.{css} --fix"
   },
   "dependencies": {
+    "@iconify-json/fa6-brands": "^1.1.11",
+    "@iconify-json/simple-icons": "^1.1.56",
     "@unocss/reset": "^0.53.1",
     "javascript-state-machine": "^3.1.0",
     "solid-js": "^1.7.6",
