--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ coverage
 /src/promise-like.js
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+# .vscode/*
+# !.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
