--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsdom": "^21.1.0",
     "promises-aplus-tests": "^2.1.2",
     "stylelint": "^15.7.0",
+    "tsx": "^3.12.7",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
     "vite-plugin-solid": "^2.7.0",
