chore: add last updated timestamp

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,8 @@
     "noEmit": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "references": [{
+    "path": "./tsconfig.node.json"
+  }]
 }
