--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify-json/fa6-brands": "^1.1.11",
     "@iconify-json/simple-icons": "^1.1.56",
     "@unocss/reset": "^0.53.1",
+    "dayjs": "^1.11.8",
     "javascript-state-machine": "^3.1.0",
     "solid-js": "^1.7.6",
     "unocss": "^0.53.1",
