--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
   "description": "My snippets",
   "license": "MIT",
   "scripts": {
-    "start": "vite",
-    "dev": "vite --open",
-    "build": "vite build",
+    "dev": "tsx ./src/server.ts",
+    "prod": "NODE_ENV=production tsx ./src/server.ts",
+    "cleanup": "rimraf --glob dist",
+    "build": "pnpm cleanup && pnpm build:client && pnpm build:server",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.ts",
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint .",
     "fix": "eslint . --fix && pnpm stylelint:fix",
-    "stylelint": "stylelint **/*.{css}",
-    "stylelint:fix": "stylelint **/*.{css} --fix"
+    "stylelint": "stylelint **/*.css",
+    "stylelint:fix": "stylelint **/*.css --fix"
   },
   "dependencies": {
     "@iconify-json/fa6-brands": "^1.1.11",
     "@iconify-json/simple-icons": "^1.1.56",
     "@unocss/reset": "^0.53.1",
+    "compression": "^1.7.4",
     "dayjs": "^1.11.8",
     "javascript-state-machine": "^3.1.0",
-    "solid-js": "^1.7.6",
+    "sirv": "^2.0.3",
+    "solid-js": "^1.7.8",
     "unocss": "^0.53.1",
     "vue": "^3.3.4",
     "vue2": "npm:vue@^2.6.14"
@@ -33,14 +38,19 @@
     "@bernankez/stylelint-config": "^0.4.3",
     "@solidjs/testing-library": "^0.6.0",
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/compression": "^1.7.2",
     "@types/testing-library__jest-dom": "^5.14.5",
     "eslint": "^8.42.0",
+    "h3": "^1.7.1",
     "jsdom": "^21.1.0",
+    "listhen": "^1.1.2",
     "promises-aplus-tests": "^2.1.2",
+    "rimraf": "^5.0.1",
     "stylelint": "^15.7.0",
     "tsx": "^3.12.7",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
+    "vite-plugin-inspect": "^0.7.33",
     "vite-plugin-solid": "^2.7.0",
     "vitest": "^0.28.4"
   }
