--- a/package.json
+++ b/package.json
@@ -21,37 +21,38 @@
   },
   "dependencies": {
     "@iconify-json/fa6-brands": "^1.1.11",
-    "@iconify-json/simple-icons": "^1.1.56",
-    "@unocss/reset": "^0.53.1",
+    "@iconify-json/simple-icons": "^1.1.61",
+    "@unocss/reset": "^0.53.5",
     "compression": "^1.7.4",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.9",
     "javascript-state-machine": "^3.1.0",
-    "sirv": "^2.0.3",
+    "serve-static": "^1.15.0",
     "solid-js": "^1.7.8",
-    "unocss": "^0.53.1",
+    "unocss": "^0.53.5",
     "vue": "^3.3.4",
-    "vue2": "npm:vue@^2.6.14"
+    "vue2": "npm:vue@^3.3.4"
   },
   "devDependencies": {
     "@bernankez/eslint-config-react": "^0.7.0",
     "@bernankez/eslint-config-unocss": "^0.7.0",
-    "@bernankez/stylelint-config": "^0.4.3",
-    "@solidjs/testing-library": "^0.6.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@bernankez/stylelint-config": "^0.4.4",
+    "@solidjs/testing-library": "^0.8.4",
+    "@testing-library/jest-dom": "^5.17.0",
     "@types/compression": "^1.7.2",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "eslint": "^8.42.0",
+    "@types/serve-static": "^1.15.2",
+    "@types/testing-library__jest-dom": "^5.14.8",
+    "eslint": "^8.45.0",
     "h3": "^1.7.1",
-    "jsdom": "^21.1.0",
+    "jsdom": "^22.1.0",
     "listhen": "^1.1.2",
     "promises-aplus-tests": "^2.1.2",
     "rimraf": "^5.0.1",
-    "stylelint": "^15.7.0",
+    "stylelint": "^15.10.2",
     "tsx": "^3.12.7",
-    "typescript": "^4.9.5",
-    "vite": "^4.3.9",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.4",
     "vite-plugin-inspect": "^0.7.33",
     "vite-plugin-solid": "^2.7.0",
-    "vitest": "^0.28.4"
+    "vitest": "^0.33.0"
   }
 }
